subindo outra rota

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=SpringAreaRestrita
 spring.data.mongodb.uri=mongodb+srv://${USER}:${PASSWORD}@educaecoforms.v83ha.mongodb.net/EducaEcoForms?retryWrites=true&w=majority&appName=EducaEcoForms
+spring.jpa.properties.hibernate.jdbc.time_zone=America/Sao_Paulo
 
 
